[Julia] Add some code for working with wrong path to Julia internal file "sys.so"

BUG: 425695
FIXED-IN: 20.08.2